# CLUE_dataset_analysis

./: .gitignore  README.md  config.json  config_example.README.md  config_example.json  pyproject.toml  requirements.txt
src/clue_pathway_enrichment/: __init__.py
src/clue_pathway_enrichment/analysis/: correlations.py  ranking.py  visualization.py
src/clue_pathway_enrichment/batch/: cli.py  scan_signatures.py
src/clue_pathway_enrichment/io/: load_pathways.py  load_signature.py
src/clue_pathway_enrichment/methods/: alpha_rra.py  alpha_rra_wrapper.py  xlmhg_wrapper.py
src/clue_pathway_enrichment/pipeline/: cli.py  config.py  run_pipeline.py
src/clue_pathway_enrichment/preprocessing/: create_ranked_list.py  split_rank_signature.py
tests/: conftest.py  io_tests.py  test_binary_vectors.py  test_cli_merge_alpha_rra.py  test_end_to_end_small.py  test_io_loading.py  test_pipeline_config.py  test_run_pipeline_forwarding.py  test_visualization.py
