[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clue_pathway_enrichment"
version = "0.0.0"
description = "Skeleton package for CLUE pathway enrichment"
readme = "README.md"
authors = [ { name = "Auto", email = "you@example.com" } ]
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "tomli; python_version < '3.11'",
]

[project.scripts]
clue-pathway-enrichment = "clue_pathway_enrichment.pipeline.cli:main"

# No runtime dependencies for the skeleton. Use requirements.txt for dev/test deps.
